--- a/server/.gitignore
+++ b/server/.gitignore
@@ -29,3 +29,6 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 *.sublime-project
 /tests/tests/
 /tests/results/
+
+# Smarty cache directory
+application/views/templates_c/*
