--- a/server/.htaccess
+++ b/server/.htaccess
@@ -1,6 +1,12 @@
 Options +FollowSymLinks
 IndexIgnore *
 
+<IfModule mod_rewrite.c>
+RewriteEngine on
+RewriteCond %{HTTPS} !=on [NC]
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+</IfModule>
+
 <IfModule mod_expires.c>
 ExpiresActive On
 ############################################################
